--- a/app/globals.css
+++ b/app/globals.css
@@ -46,6 +46,22 @@
   .animate-infinite-scroll {
     animation: scroll var(--scroll-speed, 30s) linear infinite;
   }
+
+  @keyframes slowZoom {
+    0% {
+      transform: scale(1.05);
+    }
+    50% {
+      transform: scale(1.1);
+    }
+    100% {
+      transform: scale(1.05);
+    }
+  }
+
+  .animate-slowZoom {
+    animation: slowZoom 20s ease-in-out infinite;
+  }
 }
 
 html {
